--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Portfólio da Dhenyffer maciel</title>
+    <title>Portfólio da Dhenyffer Maciel</title>
 </head>
 
 <body>
     <header class="conteiner centralizado">
-        <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="avatar">
+        <img src="funny-cat-pic-v0-tyzusvmzmr7a1.webp" alt="avatar da Fernanda" class="avatar">
         <p class="destaque">Eu sou Dhenyffer Maciel</p>
         <h1>Eu estudo Programação</h1>
-        <p>Estudo no colégio Estadual de Marmeleiro, e trabalho no Petshop Bixus e Caprixus durante o dia.  Acreditando sempre no poder da resiliência e da dedicação, passei por muitos obstáculos que me tornaram mais forte e mais determinada. </p>
-        <p></p>
-        <div class="selos">
-            <span class="selo">HTML</span>
-            <span class="selo">CSS</span>
-            <span class="selo">JavaScript</span>
-            <span class="selo">Scratch</span>
-        </div>
+        <p>Sou Dhenyffer e moro em Marmeleiro, Paraná, e trabalho como banhista em um petshop local. Com uma paixão por animais desde jovem,
+            dedica-se a oferecer os melhores cuidados e atendimentos aos pets e seus donos
+                <p></p>
+                <div class="selos">
+                    <span class="selo">HTML</span>
+                    <span class="selo">CSS</span>
+                    <span class="selo">JavaScript</span>
+                    <span class="selo">Scratch</span>
+                </div>
     </header>
 
     <main class="conteiner">
@@ -28,7 +29,7 @@
         <div class="linha">
             <!-- Projeto 1 -->
             <div class="cartao">
-                <img src="shutterstock_148972376.jpg" alt="Imagem do projeto de biblioteca virtual">
+                <img src="minha-biblioteca-768x402.jpeg" alt="Imagem do projeto de biblioteca virtual">
                 <div class="corpo-cartao">
                     <h5>Minha Biblioteca: Uma Webpage Personalizada</h5>
                     <p>Este projeto é uma página web que apresenta uma lista dos meus livros favoritos...</p>
@@ -37,16 +38,17 @@
             </div>
             <!-- Projeto 2 -->
             <div class="cartao">
-                <img src="scratch-gato-mochila.jpg" alt="Imagem do projeto de IA interativa">
+                <img src="images.jpeg" alt="Imagem do projeto de IA interativa">
                 <div class="corpo-cartao">
-                    <h5>Decidindo o Futuro: Uma Jornada Interativa sobre a Intelig</h5>
-                    <p>forma remota alunos aprendem a criar jogos no scratch</p>
+                    <h5>Decidindo o Futuro: Uma Jornada Interativa sobre a Inteligência Artificial</h5>
+                    <p>Este projeto é um jogo interativo baseado em navegador que explora o impacto e as implicações da
+                        IA...</p>
                     <button class="botao-link" onclick="abrirModal('modal2')">Veja o projeto</button>
                 </div>
             </div>
             <!-- Projeto 3 -->
             <div class="cartao">
-                <img src="img/projeto-3.png" alt="Imagem do projeto de astronomia com Scratch">
+                <img src="download.jpeg" alt="Imagem do projeto de astronomia com Scratch">
                 <div class="corpo-cartao">
                     <h5>Explorando o Universo: Uma Aventura Interativa em Astronomia com Scratch</h5>
                     <p>Este projeto Scratch cria uma experiência interativa educativa sobre astronomia...</p>
@@ -62,7 +64,7 @@
             <span class="fechar" onclick="fecharModal('modal1')">&times;</span>
             <h5>Minha Biblioteca: Uma Webpage Personalizada</h5>
             <p>O projeto é uma página web criada com HTML e CSS...</p>
-            <img src="img/projeto-1.png" class="imagem-cheia">
+            <img src="minha-biblioteca-768x402.jpeg" class="imagem-cheia">
             <div class="rodape-modal">
                 <a href="https://femascheti.github.io/minhas-leituras/">Ver projeto ao vivo</a>
                 <a href="https://github.com/femascheti/minhas-leituras">Ver código do projeto</a>
@@ -75,10 +77,12 @@
             <span class="fechar" onclick="fecharModal('modal2')">&times;</span>
             <h5>Decidindo o Futuro</h5>
             <p>O projeto consiste em uma aplicação web interativa...</p>
-            <img src="img/projeto-2.png" class="imagem-cheia">
+            <img src="images.jpeg" class="imagem-cheia">
             <div class="rodape-modal">
-                <a href="https://femascheti.github.io/tecnicas-computacionais-refletindo-sobre-ia/">Ver projeto ao vivo</a>
-                <a href="https://github.com/femascheti/tecnicas-computacionais-refletindo-sobre-ia">Ver código do projeto</a>
+                <a href="https://femascheti.github.io/tecnicas-computacionais-refletindo-sobre-ia/">Ver projeto ao
+                    vivo</a>
+                <a href="https://github.com/femascheti/tecnicas-computacionais-refletindo-sobre-ia">Ver código do
+                    projeto</a>
             </div>
         </div>
     </div>
@@ -88,7 +92,7 @@
             <span class="fechar" onclick="fecharModal('modal3')">&times;</span>
             <h5>Explorando o Universo</h5>
             <p>O projeto é uma aplicação educativa interativa focada em astronomia...</p>
-            <img src="img/projeto-3.png" class="imagem-cheia">
+            <img src="download.jpeg" class="imagem-cheia">
             <div class="rodape-modal">
                 <a href="https://scratch.mit.edu/projects/951732825/">Ver projeto ao vivo</a>
             </div>
@@ -100,7 +104,7 @@
         <div class="redes">
             <a href="https://github.com/femascheti">GitHub</a>
         </div>
-        <p>© Copyright 2024. Produzido por Fernanda Mascheti</p>
+        <p>© Copyright 2024. Produzido por Dhenyffer Maciel</p>
     </footer>
 
     <script>
